[project]
name = "domo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.8.1",
    "django==4.2.11",
    "django-cors-headers==4.3.1",
    "djangorestframework==3.15.1",
    "djangorestframework-simplejwt==5.3.1",
    "jieba==0.42.1",
    "magika==0.5.1",
    "numpy==1.26.4",
    "pillow==10.4.0",
    "portalocker==2.10.1",
    "sqlparse==0.5.0",
    "sumy==0.11.0",
    "tzdata==2024.1",
]

[project.optional-dependencies]
prod = [
    "gunicorn>=23.0.0"
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
